--- a/contact.html
+++ b/contact.html
@@ -37,26 +37,24 @@
     <main class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3>Contact</h3>
+                <h3>Drop a Note</h3>
             </div>
         </div>
         <div class="row">
             <div class=" col-md-12">
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                        <label for="inputName">Name</label>
+                        <input type="text" class="form-control" id="inputName" placeholder="Enter name">
+                       
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <label for="inputEmail">Password</label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="example@gmail.com">
                     </div>
                     <div class="form-group">
-                        <label for="exampleCheck1">Message</label>
-                        <textarea class="form-check-input" rows="10" columns="80"> </textarea>
+                        <label for="MessageArea">Message</label>
+                        <textarea class="form-control" id="MessageArea" rows="6"></textarea>
                       
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
