--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
     <div>
-    ></head>
+        >
+</head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
@@ -33,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container">
+    <main class="container"> 
         <div class="row">
             <div class="col-md-12">
                 <h3>Portfolio</h3>
@@ -41,40 +42,60 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
-        </div> 
+        </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
-        </div> 
+        </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg"class="img-fluid" alt="Responsive image">
+                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
             </div>
-        </div> 
+        </div>
+
+        <div class="container">
+            <div class="row">
+              <div class="col align-self-start">
+                One of three columns
+              </div>
+              <div class="col align-self-center">
+                One of three columns
+              </div>
+              <div class="col align-self-end">
+                One of three columns
+              </div>
+            </div>
+          </div>
+
+  
     </main>
     <footer class="bg-info">
-        <section> 
+        <section>
             <h6>&copy; Jeneth Diesta, 2020</h6>
         </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
+
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
