updated style sheet and fixed errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeneth's Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -20,7 +20,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto"></ul>
                 <li class="nav-item active">
                     <a class="nav-link" href="/index.html">About Me <span class="sr-only">(current)</span></a>
                 </li>
@@ -34,23 +34,25 @@
             </ul>
         </div>
     </nav>
-    <main class="container"> 
+
+    <h3>Portfolio</h3>
+    <main class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3>Portfolio</h3>
+
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/IMG_2466.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/IMG_2365.jpg" class="img-fluid" alt="Responsive image">
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/IMG_8017.JPG" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
                 <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
@@ -65,21 +67,9 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-              <div class="col align-self-start">
-                One of three columns
-              </div>
-              <div class="col align-self-center">
-                One of three columns
-              </div>
-              <div class="col align-self-end">
-                One of three columns
-              </div>
-            </div>
-          </div>
 
-  
+
+
     </main>
     <footer class="bg-info">
         <section>
