updated the images

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,26 +44,26 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/IMG_2466.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/human.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/IMG_2365.jpg" class="img-fluid" alt="Responsive image">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <img src="./assets/IMG_8017.JPG" class="img-fluid" alt="Responsive image">
-            </div>
-            <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/collaboration.jpg" class="img-fluid" alt="Responsive image">
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/great.jpg" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <img src="./assets/peacock.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./assets/iphone.jpg" class="img-fluid" alt="Responsive image">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="./assets/keyboard.jpg" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-md-6">
+                <img src="./assets/nerd.jpg" class="img-fluid" alt="Responsive image">
             </div>
         </div>
 
