--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
     <div>
-        >
+        
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto"></ul>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">About Me <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
