spacing for the index text set to auto

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,52 +36,50 @@
     </nav>
 
     <main class="container">
-        <h3>Portfolio</h3>
+        <h4>Portfolio</h4>
         <div class="row">
             <div class="col-md-12">
 
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 portfolio-section"> 
+            <div class="col-md-6 portfolio-section">
                 <!-- we inserted a class for the parent and child in order to write text on top of the image. this links to style.css -->
-                <img src="./assets/human.jpg" height="300" width="400" class="img-fluid img-portfolio"
+                <img src="./assets/word.jpg" height="300" width="400" class="img-fluid img-portfolio"
                     alt="Responsive image">
-                <p class="word-portfolio">Password
+                <p class="text-over-img">Word Game</p>
                 </p>
             </div>
             <div class="col-md-6">
                 <img src="./assets/collaboration.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
-                <p class="word-portfolio">Password
+                <p class="word-portfolio">Trivia
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <img src="./assets/iphone.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
-                <p class="word-portfolio">Password
+                <p class="word-portfolio">Info Widget
                 </p>
             </div>
             <div class="col-md-6">
                 <img src="./assets/keyboard.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
-                <p class="word-portfolio">Password
+                <p class="word-portfolio">RPG Game
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/keyboard.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
-                <p class="word-portfolio">Password
+                <img src="./assets/RPS.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
+                <p class="word-portfolio">Rock Paper Scissors
                 </p>
             </div>
             <div class="col-md-6">
                 <img src="./assets/nerd.jpg" height="300" width="400" class="img-fluid" alt="Responsive image">
-                <p class="word-portfolio">Password
+                <p class="word-portfolio">Password Generator
                 </p>
             </div>
         </div>
-
-
 
 
     </main>
