updated readme and about me description

--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
     <main class="container" class=container>
         <h3>About Me</h3>
         <img src="./assets/profile pic.jpg" class="float-left" class="my-image" alt="Responsive image">
-
-        <p class="text-left"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-            Ipsum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda, eius porro velit doloremque
-            aspernatur soluta sequi fugit, quia commodi laborum modi? Saepe porro ipsa laudantium aut pariatur animi
-            iure.</p>
-
+        <style>
+            /* p.ex1 { */
+            margin-left: 30px;
+            }
+        </style>
+        <p class="text-left">Jeneth Diesta is an IT project manager for a global financial institution with experience
+            in managing offshore/onshore teams for multi-million dollar technology projects. Jeneth began her journey in tech as a
+            systems analyst, being exposed to the backend mainframe systems that feed into online applications. She is a Certified
+            Scrum Master and is looking to expand her skillset by becoming an IT Tech Lead. </p>
+        <p> Jeneth believes in the power of collaboration, grit and teamwork to successfully execute projects. She
+            also believes in the importance of peer recognition as an important building block in creating an excellent company culture.
+            Jeneth is actively involved in NextGen Leaders, an employee resource group (ERG) which seeks to bring together diverse individuals 
+            across the generations to network, collaborate, and make meaningful connections. 
+        </p>
 
         </div>
 
