updated the footer to add icons

--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
             }
         </style>
         <p class="text-left">Jeneth Diesta is an IT project manager for a global financial institution with experience
-            in managing offshore/onshore teams for multi-million dollar technology projects. Jeneth began her journey in tech as a
-            systems analyst, being exposed to the backend mainframe systems that feed into online applications. She is a Certified
+            in managing offshore/onshore teams for multi-million dollar technology projects. Jeneth began her journey in
+            tech as a
+            systems analyst, being exposed to the backend mainframe systems that feed into online applications. She is a
+            Certified
             Scrum Master and is looking to expand her skillset by becoming an IT Tech Lead. </p>
         <p> Jeneth believes in the power of collaboration, grit and teamwork to successfully execute projects. She
-            also believes in the importance of peer recognition as an important building block in creating an excellent company culture.
-            Jeneth is actively involved in NextGen Leaders, an employee resource group (ERG) which seeks to bring together diverse individuals 
-            across the generations to network, collaborate, and make meaningful connections. 
+            also believes in the importance of peer recognition as an important building block in creating an excellent
+            company culture.
+            Jeneth is actively involved in NextGen Leaders, an employee resource group (ERG) which seeks to bring
+            together diverse individuals
+            across the generations to network, collaborate, and make meaningful connections.
         </p>
 
         </div>
@@ -61,11 +65,14 @@
 
     <footer class="bg-info">
 
-        <!-- <section class="text-right"> -->
+        <section class="text-right">
 
-        <!-- <a  href="https://github.com/jen6one9" i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
-        <!-- <a  href="www.linkedin.com/in/jeneth-diesta-b45a6b49"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a> -->
-        <!-- </section>    -->
+            <a href="https://github.com/jen6one9" i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+
+            <a href="https://www.linkedin.com/in/jeneth-diesta/" i class="fa fa-linkedin fa-2x"
+                aria-hidden="true"></i></a>
+
+        </section> -->
         <!-- <section> -->
         <h6 class="text-center">&copy; Jeneth Diesta, 2020</h6>
 
