ran a validator for error

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             </ul>
         </div>
     </nav>
-    <main class="container" class=container>
+    <main class="container">
         <h3>About Me</h3>
         <img src="./assets/profile pic.jpg" class="float-left" class="my-image" alt="Responsive image">
-        <style>
-            /* p.ex1 { */
-            margin-left: 30px;
-            }
-        </style>
+        <!-- <style> -->
+            <!-- /* p.ex1 { */ -->
+            <!-- margin-left: 30px; -->
+            <!-- } -->
+        <!-- </style> -->
         <p class="text-left">Jeneth Diesta is an IT project manager for a global financial institution with experience
             in managing offshore/onshore teams for multi-million dollar technology projects. Jeneth began her journey in
             tech as a
@@ -58,8 +58,6 @@
             across the generations to network, collaborate, and make meaningful connections.
         </p>
 
-        </div>
-
     </main>
 
 
@@ -67,10 +65,10 @@
 
         <section class="text-right">
 
-            <a href="https://github.com/jen6one9" i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            <a href="https://github.com/jen6one9" i class="fa fa-github fa-2x" aria-hidden="true"></a>
 
             <a href="https://www.linkedin.com/in/jeneth-diesta/" i class="fa fa-linkedin fa-2x"
-                aria-hidden="true"></i></a>
+                aria-hidden="true"></a>
 
         </section> -->
         <!-- <section> -->
